--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,7 @@ section {
 }
 
 
-.about-me img{
+#about-me img{
     flex: 0 12%;
     width: 50%;
     height: 50%;
@@ -126,6 +126,11 @@ section {
     width: 50%;
 }
 
+.projects-icon{
+    width: 100px;
+    height: auto;
+}
+
 .projects{
     background: var(--tertiary-color);
     display: flex;
@@ -135,17 +140,10 @@ section {
     padding: 20px;
     text-align: center;
     border-width: 20px;
-}
-
-.projects img{
-    width: 100px;
+    width: 50px;
     height: auto;
-
 }
 
-.projects imgs{
-
-}
 
 .flex-row{
     display: flex;
