--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,244 +1,241 @@
 :root {
-    --primary-color: #4dd2ff;
-    --secondary-color: white;
-    --tertiary-color: #ccccff;
+  --primary-color: #4dd2ff;
+  --secondary-color: white;
+  --tertiary-color: #ccccff;
 }
 
 body {
-    font-family: Helvitica, Arial, sans-serif;
-    color: var( --secondary-color);
-    background-color: var(--tertiary-color);
+  font-family: Helvitica, Arial, sans-serif;
+  color: var(--secondary-color);
+  background-color: var(--tertiary-color);
 }
 
 nav {
-    display: flex;
-  }
+  display: flex;
+}
 
 /* apply styles to <header>*/
 header {
-    padding: 20px 35px;
-    background-color: var(--tertiary-color);
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    background-image: url("../images/BayBridge-bg.jpg");
-    background-size: cover;
-    background-position: 100%;
-    background-attachment: fixed;
-    z-index:9999;
+  padding: 20px 35px;
+  background-color: var(--tertiary-color);
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-image: url("../images/BayBridge-bg.jpg");
+  background-size: cover;
+  background-position: 100%;
+  background-attachment: fixed;
+  z-index: 9999;
 }
 
 header h1 {
-    font-weight: bold;
-    font-size: 36px;
-    color: var(--primary-color);
-    margin: 0;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  font-weight: bold;
+  font-size: 36px;
+  color: var(--primary-color);
+  margin: 0;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-header a{
-    text-decoration: none;
-    color: var(--primary-color);
+header a {
+  text-decoration: none;
+  color: var(--primary-color);
 }
 
-header nav ul{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    list-style: none;
+header nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
 }
 
-header nav ul li a{
-    padding: 10px 10px;
-    font-weight: lighter;
-    font-size: 1.55vw;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+header nav ul li a {
+  padding: 10px 10px;
+  font-weight: lighter;
+  font-size: 1.55vw;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero {
-    background-image: url("../images/BayBridge-bg.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 80%; 
-    background-attachment: fixed;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: flex-start;
+  background-image: url("../images/BayBridge-bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 80%;
+  background-attachment: fixed;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: flex-start;
 }
 
-.hero-cta{
-    width: 100%;
-    text-align: center;
-    margin: 0;
-    font-size: 18px;
-    line-height: 1;
-    flex: 1 12%;
+.hero-cta {
+  width: 100%;
+  text-align: center;
+  margin: 0;
+  font-size: 18px;
+  line-height: 1;
+  flex: 1 12%;
 }
 
-.hero-cta h2{
-    font-style: italic;
-    font-size: 55px;
-    color: var(--primary-color);
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+.hero-cta h2 {
+  font-style: italic;
+  font-size: 55px;
+  color: var(--primary-color);
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
-
-
 
 footer {
-    text-align: center;
-    margin: 0 auto;
-    background-color: #0388fc;
-    position:absolute;
-    bottom:absolute;
-    width: 100%;
+  text-align: center;
+  margin: 0 auto;
+  background-color: #0388fc;
+  position: absolute;
+  bottom: absolute;
+  width: 100%;
 }
-
 
 section {
-    padding: 60px;
+  padding: 60px;
 }
 
-#about-me img{
-    flex: 0 12%;
-    width: 30%;
-    height: 30%;
-    text-align: center;
-    object-fit: contain;
+#about-me img {
+  flex: 0 12%;
+  width: 30%;
+  height: 30%;
+  text-align: center;
+  object-fit: contain;
 }
 
 .section-title {
-    font-size: 48px;
-    color: var(--primary-color);
-    border-bottom: 3px solid;
-    padding-bottom: 20px;
-    text-align: center;
-    margin: 0 auto 35px auto;
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+  font-size: 48px;
+  color: var(--primary-color);
+  border-bottom: 3px solid;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
-
 
 .inline {
-    display: inline;
-    border:1px solid var(--secondary-color);
-    margin: 10px;
-
+  display: inline;
+  border: 1px solid var(--secondary-color);
+  margin: 10px;
 }
 
-.projects-icon{
-    width: 100px;
-    height: auto;
-    position: relative;
-    display: flex;
-    flex-wrap: wrap;
-    flex: 50%;
-    margin-bottom: 15px;
-    align-items: flex-start;
+.projects-icon {
+  width: 100px;
+  height: auto;
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  flex: 50%;
+  margin-bottom: 15px;
+  align-items: flex-start;
 }
 
 .item {
-    width: 100%
-  }
-  
-  .container {
-    display: flex;
-    flex-wrap: wrap;
-    flex: 50%;
-    padding-bottom: 1.5em;
-  }
+  width: 100%;
+}
 
-
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 50%;
+  padding-bottom: 1.5em;
+  padding-right: 1.5em;
+}
 
 a:hover {
-    background-color: var(--primary-color);
+  background-color: var(--primary-color);
 }
 
-.project-text{
-    position: absolute;
-    bottom:10px;
-    left: 5px;
-    font-weight: bold;
-    color: var(--primary-color);
+.project-text {
+  position: absolute;
+  bottom: 10px;
+  left: 5px;
+  font-weight: bold;
+  color: var(--primary-color);
 }
 
-.flex-row{
-    display: flex;
+.flex-row {
+  display: flex;
 }
 
 /*MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER*/
- @media screen and (max-width: 980px) {
-    header {
-        padding-bottom: 0;
-        justify-content: center;
-        position: relative;
-    }
+@media screen and (max-width: 980px) {
+  header {
+    padding-bottom: 0;
+    justify-content: center;
+    position: relative;
+  }
 
-    header h1 {
-        width: 100%;
-        text-align: center;
-    }
-    
-    header nav ul{
-        margin-top: 20px;
-        width: 100%;
-        justify-content: content;
-    }
+  header h1 {
+    width: 100%;
+    text-align: center;
+  }
 
-    header nav ul li a {
-        font-size: 20px;
-    }
+  header nav ul {
+    margin-top: 20px;
+    width: 100%;
+    justify-content: content;
+  }
 
-    header nav ul li a:hover {
-        background: var(--primary-color);
-        color: var(--secondary-color);
-        border-radius: 15px;
-        text-shadow: none;
-    }
+  header nav ul li a {
+    font-size: 20px;
+  }
 
-    footer h2, footer div {
-        text-align: center;
-        width: 100%;
-    }
+  header nav ul li a:hover {
+    background: var(--primary-color);
+    color: var(--secondary-color);
+    border-radius: 15px;
+    text-shadow: none;
+  }
 
-    .section-title {
-        width: 80%;
-    }
+  footer h2,
+  footer div {
+    text-align: center;
+    width: 100%;
+  }
 
-    .contact-info iframe {
-        flex: 1 100%;
-    }
- }
+  .section-title {
+    width: 80%;
+  }
 
- /*MEDIA QUERY FOR TABLETS AND SMALLER*/
- @media screen and (max-width: 768px) {
-    section, nav {
-        flex-direction: column;
-    }
- }
+  .contact-info iframe {
+    flex: 1 100%;
+  }
+}
 
- /*MEDIA QUERY FOR MOBILE PHONES AND SMALLER*/
- @media screen and (max-width: 575px) {
-    .section-title{
-        width: 95%;
-    }
+/*MEDIA QUERY FOR TABLETS AND SMALLER*/
+@media screen and (max-width: 768px) {
+  section,
+  nav {
+    flex-direction: column;
+  }
+}
 
-    .contact-info{
-        text-align: center;
-    }
+/*MEDIA QUERY FOR MOBILE PHONES AND SMALLER*/
+@media screen and (max-width: 575px) {
+  .section-title {
+    width: 95%;
+  }
 
-    .contact-info > *{
-        flex: 0 100%;
-    }
+  .contact-info {
+    text-align: center;
+  }
 
-    section, nav {
-        flex-direction: column;
-    }
- };
+  .contact-info > * {
+    flex: 0 100%;
+  }
+
+  section,
+  nav {
+    flex-direction: column;
+  }
+} ;
