--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,13 +27,13 @@ header {
   top: 0;
   background-image: url("../images/BayBridge-bg.jpg");
   background-size: cover;
-  background-position: 100%;
+  background-position: 80%;
   background-attachment: fixed;
   z-index: 9999;
 }
 
 header h1 {
-  font-weight: bold;
+  font-weight: bold italic;
   font-size: 36px;
   color: var(--primary-color);
   margin: 0;
@@ -42,7 +42,7 @@ header h1 {
 
 header a {
   text-decoration: none;
-  color: var(--primary-color);
+  color: yellow;
 }
 
 header nav ul {
@@ -69,16 +69,31 @@ header nav ul li a {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  align-items: flex-start;
+  text-align: center;
+  margin: 0 auto;
+  align-items: center;
+  width: 100%;
 }
+
+footer {
+    text-align: center;
+    margin: 0 auto;
+    background-color: #0388fc;
+    position: absolute;
+    bottom: absolute;
+    width: 100%;
+  }
 
 .hero-cta {
   width: 100%;
   text-align: center;
-  margin: 0;
+  margin: 0 auto;
   font-size: 18px;
   line-height: 1;
   flex: 1 12%;
+  display: flex;
+  flex-wrap: wrap;
+  
 }
 
 .hero-cta h2 {
@@ -86,6 +101,7 @@ header nav ul li a {
   font-size: 55px;
   color: var(--primary-color);
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  display: flex;
 }
 
 footer {
@@ -141,7 +157,9 @@ section {
 }
 
 .item {
-  width: 100%;
+  width: 75%;
+  display: inline-block;
+  margin-left: 20px;
 }
 
 .container {
@@ -150,6 +168,7 @@ section {
   flex: 50%;
   padding-bottom: 1.5em;
   padding-right: 1.5em;
+  
 }
 
 a:hover {
